# MySubstitute

./: .gitignore  AI_FACE_SWAP_QUICKSTART.md  ANIME_GAN_QUICKSTART.md  CMakeLists.txt  CMakeLists_DirectShow.txt  CMakeLists_test_face_filter.txt  CROSSFACE_INTEGRATION_COMPLETE.md  CROSSFACE_SIMSWAP_SETUP.md  DOWNLOAD_MODEL_HELP.md  MySubstitute.code-workspace  PERSON_REPLACEMENT_FIX.md  QUICKSTART.md  README.md  REPOSITORY_ORGANIZATION.md  SIMSWAP_FIX.md  VIRTUAL_BACKGROUND_IMPROVEMENTS.md  build.bat  check_model.py  create_placeholder_images.py  create_placeholders.bat  rebuild.bat  register_virtual_camera.reg  run.bat  run_as_admin.bat  run_debug.bat  setup.bat  setup_ai_models.bat  setup_model.ps1  test_admin.bat  test_browser_compat.cpp  test_camera_detailed.cpp  test_camera_enum.cpp  test_camera_safe.cpp  test_com_instantiation.cpp  test_directshow_device.cpp  test_dll_load.cpp  test_filters_console.ps1  test_media_devices.bat  test_virtual_camera.bat  unregister_virtual_camera.reg
.github/: copilot-instructions.md
docs/: ANIMEGAN_STATUS.md  ANIME_GAN_MODEL_ISSUE.md  ANIME_GAN_SUMMARY.md  COMPATIBLE_MODELS.md  FILTER_ARCHITECTURE.md  GPU_ACCELERATION.md  IMAGE_FILE_EXTENSION_FIX.md  PERSON_REPLACEMENT_ERROR_FIX.md  PERSON_REPLACEMENT_SUMMARY.md  README.md  UI_VIRTUAL_BACKGROUND_CONTROLS.md  UWP_COMPATIBILITY.md  VIRTUAL_BACKGROUND_SETUP.md  anime_gan_setup.md  development_setup.md  face_filter_processor.md  implementation_plan.md  model_conversion_guide.md  person_replacement_processor.md  person_replacement_quickstart.md
models/: AnimeGANv2_Hayao.onnx · vumichien-AnimeGANv2_Hayao at main.url
scripts/: README.md  analyze_onnx_model.py  copy_dll_safe.ps1  create_placeholders.cpp  download_anime_model.ps1  download_compatible_models.ps1  download_insightface_model.py  download_mediapipe_onnx.ps1  download_segmentation_model.ps1  setup_onnx_runtime.ps1  test_anime_gpu.cpp  test_face_filter.cpp  test_filter_callback.cpp  test_virtual_background.bat
src/: main.cpp  resource.h  resources.rc
src/ai/: CMakeLists.txt  ai_processor.cpp  ai_processor.h  anime_gan_processor.cpp  anime_gan_processor.h  cartoon_buffered_filter_processor.cpp  cartoon_buffered_filter_processor.h  cartoon_filter_processor.cpp  cartoon_filter_processor.h  face_filter_processor.cpp  face_filter_processor.h  passthrough_processor.cpp  passthrough_processor.h  person_replacement_processor.cpp  person_replacement_processor.h  person_tracker_processor.cpp  person_tracker_processor.h  pixel_art_processor.cpp  pixel_art_processor.h  virtual_background_processor.cpp  virtual_background_processor.h
src/capture/: CMakeLists.txt  camera_capture.cpp  camera_capture.h  frame.cpp  frame.h
src/service/: CMakeLists.txt  background_service.cpp  background_service.h
src/ui/: preview_window_manager.cpp  preview_window_manager.h  system_tray_manager.cpp  system_tray_manager.h
src/virtual_camera/: CMakeLists.txt  MySubstituteVirtualCamera.def  camera_diagnostics.cpp  camera_diagnostics.h  camera_interceptor.cpp  camera_interceptor.h  class_factory.cpp  class_factory.h  directshow_dll_main.cpp  directshow_filter_dll.cpp  directshow_filter_dll.h  directshow_registration.cpp  directshow_source_filter.cpp  directshow_source_filter.h  directshow_virtual_camera_manager.cpp  directshow_virtual_camera_manager.h  media_foundation_camera.cpp  media_foundation_camera.h  obs_style_virtual_camera.h  obs_virtual_camera_helper.cpp  obs_virtual_camera_helper.h  real_virtual_camera_registration.cpp  real_virtual_camera_registration.h  simple_registry_virtual_camera.cpp  simple_registry_virtual_camera.h  simple_virtual_camera.cpp  simple_virtual_camera.h  simple_virtual_camera_new.cpp  simple_virtual_camera_new.h  virtual_camera_directshow.cpp  virtual_camera_directshow.h  virtual_camera_filter.cpp  virtual_camera_filter.h  virtual_camera_loader.cpp  virtual_camera_loader.h  virtual_camera_manager.cpp  virtual_camera_manager.h  virtual_camera_registry.cpp  virtual_camera_registry.h  working_directshow_filter.cpp  (+1 more)
troubleshoot/: CMakeLists_test.txt  debug_virtual_camera.bat  test_crash_minimal.cpp  test_directshow_dll.bat  test_virtual_camera.cpp  test_virtual_camera_final.bat
